compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__tuples__tuple_with_block_element.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
expression: "\npub fn go() {\n  #(\n    \"1\",\n    {\n      \"2\"\n      \"3\"\n    },\n  )\n}\n"
---
----- SOURCE CODE

pub fn go() {
  #(
    "1",
    {
      "2"
      "3"
    },
  )
}


----- COMPILED JAVASCRIPT
export function go() {
  return [
    "1",
    (() => {
      "2";
      return "3";
    })(),
  ];
}
